@@ -40,10 +40,13 @@ class VexBasebandData : public Interval
 	public:
 	VexBasebandData() : streamId(-1) { }
 	std::string filename;	// or VSN, ...
+	int recorderId;		// as specified in vex file, can be associated using DATASTREAM::recorder parameter; otherwise sort to assign
 	int streamId;		// 0-based; -1 means not assigned.  Must be assigned for > 1 datastream operation
 
-	VexBasebandData(const std::string &name, int sId, const Interval &timeRange) : Interval(timeRange), filename(name), streamId(sId) {} 
-	VexBasebandData(const std::string &name, int sId, double start=-1.0e9, double stop=1.0e9) : Interval(start, stop), filename(name), streamId(sId) {}
+	VexBasebandData(const std::string &name, int drive, const Interval &timeRange) : Interval(timeRange), filename(name), recorderId(drive), streamId(-1) {} 
+	VexBasebandData(const std::string &name, int drive, double start=-1.0e9, double stop=1.0e9) : Interval(start, stop), filename(name), recorderId(drive), streamId(-1) {}
+	bool isMark5() const;
+	bool isMark6() const;
 };
 
 // returns number of removed entries; negative streamId implies remove from all streams
